iac/se4ai-chatbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: se4ai-chatbot
  name: se4ai-chatbot-deployment
  labels:
    app: se4ai-chatbot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: se4ai-chatbot-app
  template:
    metadata:
      labels:
        app: se4ai-chatbot-app
    spec:
      containers:
      - name: se4ai-chatbot
        image: mmatkowi/se4ai-chatbot:1.4
        resources:
          requests:
            ephemeral-storage: "2Gi"
          limits:
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 8501
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
          sizeLimit: 1Gi
