iac/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: test-matkowitz
  name: demo-svc
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
