iac/se4ai-chatbot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: se4ai-chatbot
  name: se4ai-chatbot-ingress
  annotations:
    cert.manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: group7.se4ai.sws.informatik.uni-leipzig.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: se4ai-chatbot-service
            port:
              number: 80
  tls:
  - hosts:
    - group7.se4ai.sws.informatik.uni-leipzig.de
    secretName: group7.se4ai.sws.informatik.uni-leipzig.de-tls
